unpackaged/objects/BE_Task__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Developer_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Developer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BrainEngine_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Developer_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Developer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BrainEngine_Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effort__c</fullName>
        <label>Effort</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>BE_User_Story__c</referenceTo>
        <relationshipLabel>BrainEngine Tasks</relationshipLabel>
        <relationshipName>BrainEngine_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>BrainEngine Task</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Task-{000000}</displayFormat>
        <label>Task</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BrainEngine Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>